--- a/example/content/posts/test-posts/フィギュアレビュー「加藤恵 ファンタジア文庫大感謝祭2017Ver.」グッドスマイルカンパニー.md
+++ b/example/content/posts/test-posts/フィギュアレビュー「加藤恵 ファンタジア文庫大感謝祭2017Ver.」グッドスマイルカンパニー.md
@@ -1,6 +1,7 @@
 ---
 date: 2023-02-26 00:03:00+9
 heroImage: "../images/sample-landscape.jpg"
+heroImageAlt: "sample landscape"
 tags:
   - フィギュア
 ---
